[gd_scene load_steps=5 format=2]

[ext_resource path="res://Theme/Theme.tres" type="Theme" id=1]
[ext_resource path="res://mocraAdventure/card_number_selector/card_number_selector.gd" type="Script" id=2]
[ext_resource path="res://images/default1.png" type="Texture2D" id=3]
[ext_resource path="res://ubuntu150.tres" type="FontFile" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1620.0
offset_bottom = -880.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="background" type="TextureRect" parent="."]
visible = false
offset_top = -0.630249
offset_right = 300.0
offset_bottom = 199.37
custom_minimum_size = Vector2( 300, 200 )
texture = ExtResource( 3 )
expand = true

[node name="Add1Button" type="Button" parent="."]
offset_left = 20.5034
offset_top = 12.6848
offset_right = 120.503
offset_bottom = 42.6848
text = "Add 1"

[node name="Add10Button" type="Button" parent="."]
offset_left = 164.641
offset_top = 12.6848
offset_right = 264.641
offset_bottom = 42.6848
text = "Add 10"

[node name="RemoveAllButton" type="Button" parent="."]
offset_left = 145.0
offset_top = 100.0
offset_right = 275.0
offset_bottom = 130.0
text = "Remove All"

[node name="ConfirmButton" type="Button" parent="."]
offset_left = 29.0
offset_top = 153.697
offset_right = 285.0
offset_bottom = 193.697
text = "CONFIRM"

[node name="CardNumber" type="Label" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 135.0
offset_bottom = 219.0
grow_horizontal = 2
scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 4 )
text = "1"

[node name="Button" type="Button" parent="."]
offset_left = 150.0
offset_top = 60.0
offset_right = 270.0
offset_bottom = 90.0
text = "Remove 1"

[connection signal="pressed" from="Add1Button" to="." method="_on_Add1Button_pressed"]
[connection signal="pressed" from="Add10Button" to="." method="_on_Add10Button_pressed"]
[connection signal="pressed" from="RemoveAllButton" to="." method="_on_RemoveAllButton_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
